TextEditor: changed base64 coder